# TidalPlayer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
TidalPlayer/: Player.cpp  Player.h  SignalHandler.cpp  SignalHandler.h  SignalSender.cpp  SignalSender.h  TidalPlayer.cpp  TidalPlayer.sln  TidalPlayer.vcxproj  TidalPlayer.vcxproj.filters
TidalPlayer/include/: SignalSender.h
TidalPlayer/src/: SignalHandler.cpp
include/: Player.h
src/: Player.cpp
